--- a/projects/03-tic-tac-toe/src/app/tic-tac-toe/tic-tac-toe.component.html
+++ b/projects/03-tic-tac-toe/src/app/tic-tac-toe/tic-tac-toe.component.html
@@ -1,1 +1,75 @@
-<p>tic-tac-toe works!</p>
+<div>
+    <h2>Tic Tac Toe!</h2>
+
+    <!-- initial screen -->
+    <div class="principal" *ngIf="showStart">
+        <a href="#" class="botao" (click)="initializeGame()">
+            Start
+        </a>
+    </div><!-- end initial screen -->
+
+    <!-- board -->
+    <div *ngIf="showBoard">
+        <ul>
+            <li class="kz-border-bottom kz-border-right" [ngClass]="{
+            'kz-img-x': showX(0,0),
+            'kz-img-o': showO(0,0),
+            'kz-victory-color': showVictory(0,0)
+            }" (click)="play(0,0)"></li>
+            <li class="kz-border-bottom kz-border-right" [ngClass]="{
+                'kz-img-x': showX(0,1),
+                'kz-img-o': showO(0,1),
+                'kz-victory-color': showVictory(0,1)
+                }" (click)="play(0,1)"></li>
+            <li class="kz-border-bottom" [ngClass]="{
+                'kz-img-x': showX(0,2),
+                'kz-img-o': showO(0,2),
+                'kz-victory-color': showVictory(0,2)
+                }" (click)="play(0,2)"></li>
+            <li class="kz-border-bottom kz-border-right" [ngClass]="{
+                'kz-img-x': showX(1,0),
+                'kz-img-o': showO(1,0),
+                'kz-victory-color': showVictory(1,0)
+                }" (click)="play(1,0)"></li>
+            <li class="kz-border-bottom kz-border-right" [ngClass]="{
+                'kz-img-x': showX(1,1),
+                'kz-img-o': showO(1,1),
+                'kz-victory-color': showVictory(1,1)
+                }" (click)="play(1,1)"></li>
+            <li class="kz-border-bottom" [ngClass]="{
+                'kz-img-x': showX(1,2),
+                'kz-img-o': showO(1,2),
+                'kz-victory-color': showVictory(1,2)
+                }" (click)="play(1,2)"></li>
+            <li class="kz-border-right" [ngClass]="{
+                'kz-img-x': showX(2,0),
+                'kz-img-o': showO(2,0),
+                'kz-victory-color': showVictory(2,0)
+                }" (click)="play(2,0)"></li>
+            <li class="kz-border-right" [ngClass]="{
+                'kz-img-x': showX(2,1),
+                'kz-img-o': showO(2,1),
+                'kz-victory-color': showVictory(2,1)
+                }" (click)="play(2,1)"></li>
+            <li [ngClass]="{
+                'kz-img-x': showX(2,2),
+                'kz-img-o': showO(2,2),
+                'kz-victory-color': showVictory(2,2)
+                }" (click)="play(2,2)"></li>
+        </ul>
+    </div><!-- end board -->
+
+    <!-- end screen -->
+    <div *ngIf="showEnd">
+        <span>
+            <p *ngIf="player==2">You win!!!</p>
+            <p *ngIf="player==1">You lose...</p>
+            <p *ngIf="player==0">The game ended in a draw...</p>
+            <br />
+            <a href="#" class="button" (click)="newGame()">
+                Play again
+            </a>
+        </span>
+    </div><!-- end end screen -->
+
+</div>
